bootCDN失效更换为七牛云CDN：https://www.jianshu.com/p/baf78537cedb